# stepcounter-devel

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  calibrate.py  grid-search.py  parse.py  pyproject.toml  requirements.txt  results.yml  scl-parser.py
algorithms/: __init__.py  base.py  peak-detect.py  random.py  registry.py  threshold-bound.py  threshold-bound8.py  threshold-edge.py  threshold-hp.py  threshold-hp8.py  threshold-lp.py  threshold-max.py  threshold-min.py  threshold-min8.py  threshold-ultra.py  threshold.py
recordings/: README.md  l1-12hz-bw2.yml  l2-12hz-bw2.yml  l2-25hz-bw2.yml  l2-25hz-bw4.yml
recordings/l1-12hz/: fast-walking-sh.b64  normal-walking-sh.csv  pc-working1.b64  pc-working2.b64  pc-working2.csv  pc-working4.b64  slow-walking-bf.csv  slow-walking-sh.b64
recordings/l1-12hz-bw2/: fast-walking-bf.b64  fast-walking-bf.csv  fast-walking-sh.csv  normal-walking-bf.b64  normal-walking-bf.csv  normal-walking-sh.b64  pc-working1.csv  pc-working3.b64  pc-working3.csv  pc-working4.csv  slow-walking-bf.b64  slow-walking-sh.csv
recordings/l2-12hz/: fast-walking-sh.csv  normal-walking-bf.b64  normal-walking-bf.csv  normal-walking-sh.b64  normal-walking-sh.csv  pc-working2.csv  pc-working3.b64  pc-working3.csv  pc-working4.b64  pc-working4.csv  slow-walking-bf.b64  (+3 more)
recordings/l2-12hz-bw2/: fast-walking-bf.b64  fast-walking-bf.csv  fast-walking-sh.b64  pc-working1.b64  pc-working1.csv  pc-working2.b64  slow-walking-sh.b64  split.json
runtime/: README.md  math_bench.c
watch-face/: stepcounter_logging_face.c  stepcounter_logging_face.h
(+70 files in other folders)
