[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stepcounter-devel"
version = "0.1.0"
description = "Step counter development tools"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "isort>=5.12.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".venv",
    "venv"
]